--- a/cc19/index.html
+++ b/cc19/index.html
@@ -475,6 +475,8 @@
         });
         bounds_group.addLayer(layer_ELville_3);
         map.addLayer(layer_ELville_3);
+        var baseMaps = {};
+        L.control.layers(baseMaps,{'<img src="legend/ELville_3.png" /> ELville': layer_ELville_3,'<img src="legend/Slville_2.png" /> Slville': layer_Slville_2,'<img src="legend/WELville_1.png" /> WELville': layer_WELville_1,'ky120rfd<br /><table><tr><td style="text-align: center;"><img src="legend/ky120rfd_0_BG0.png" /></td><td>BG</td></tr><tr><td style="text-align: center;"><img src="legend/ky120rfd_0_EastLouisville1.png" /></td><td>East Louisville</td></tr><tr><td style="text-align: center;"><img src="legend/ky120rfd_0_EKY2.png" /></td><td>EKY</td></tr><tr><td style="text-align: center;"><img src="legend/ky120rfd_0_Lex3.png" /></td><td>Lex</td></tr><tr><td style="text-align: center;"><img src="legend/ky120rfd_0_NKY4.png" /></td><td>NKY</td></tr><tr><td style="text-align: center;"><img src="legend/ky120rfd_0_Owen5.png" /></td><td>Owen</td></tr><tr><td style="text-align: center;"><img src="legend/ky120rfd_0_WestLouisville6.png" /></td><td>West Louisville</td></tr><tr><td style="text-align: center;"><img src="legend/ky120rfd_0_WKY7.png" /></td><td>WKY</td></tr><tr><td style="text-align: center;"><img src="legend/ky120rfd_0_8.png" /></td><td></td></tr></table>': layer_ky120rfd_0,}).addTo(map);
         setBounds();
         </script>
     </body>
